css/style.css
@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
@import url(../assets/boxicons.min.css);
:root {
    --color-1: #0ff;
    --color-2: #6993fd;
    --color-3: #001aff;
    --color-4: #ff00a5;
    --color-5: #ff5e00;
    --color-6: #ffff00;
    --color-bg: #0b0b24;
    --color-nav-bg: #11002e;
    --color-nav: #00eeff;
    --color-nav-hover: #fbff00;
    --color-nav-after-hover: #ff5e00;
    --color-input: #fcd6e9d0;
    --color-nav-movile: #24045c;
    --color-card-border: #666;
    --color-shadow: #000000;
    --color-footer: #04040c;
    --breakpoint-extra-large: 1100px;
}

/* scroll bar */
::-webkit-scrollbar {
    width: 6px;
    background-color: rgb(11, 1, 39);
}

::-webkit-scrollbar-track {
    border-radius: 10px;
    box-shadow: inset 0 0 4px rgb(252, 252, 252);
}

::-webkit-scrollbar-thumb {
    background: var(--color-1);
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background: var(--color-5);
}

html {
    scroll-behavior: smooth;
    scroll-padding-top: 60px;
}

#preloader {
    background-color: #000;
    background-image: url(../img/preloader.gif);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 20%;
    height: 100vh;
    width: 100%;
    position: fixed;
    z-index: 1000;
}

* {
    padding: 0;
    margin: 0;
    font-family: 'Josefin Sans', sans-serif;
    box-sizing: border-box;
}

.titulo h1{    
    font-family: 'Varela Round';
    padding: 20px 10px;
    color: #00ffc8;
    font-size: 2rem;
    font-weight: bolder;

}

.dark-mode{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--color-5);
    border: 2px solid #00eeff;
    border-radius: 50vh;
    height: 27px;
    width: 27px;
    font-size: 17px;
}
.dark-mode:hover{
    cursor: pointer;
}

/* ===MENU==== */
.navbar {
    position: fixed;
    display: flex;
    height: 40px;
    width: calc(100% - 5px);
    background-color: #00031edb;
    border: solid 2px var(--color-1);
    border-radius: 50vh;
    margin: 3px 5px;
    justify-content: center;
    box-shadow: 0 0 10px var(--color-1);
    backdrop-filter: blur(5px);
    z-index: 5;
    transition: all ease-in 0.2s;
}

.logo {
    display: flex;
    align-items: center;
    width: 5%;
    padding-left: 10px;
}

.logo img {
    width: 45px;
}

.logo a {
    font-family: 'Varela Round', sans-serif;
    text-decoration: solid;
    font-weight: bold;
    font-size: 2rem;
    text-shadow: 2px 0 0;
    color: var(--color-5);
}

.nav {
    display: flex;
    padding: 0px 5px;
    width: 95%;
    justify-content: space-between;
}

.navbarli {
    display: flex;
    background: transparent;
    list-style-type: none;
}

nav ul li {
    display: flex;
    align-items: center;
    list-style-type: none;
    position: relative;
    padding: 0px 7px;
}
nav ul li a{
    font-family: 'Varela Round', sans-serif;
    font-size: 16px;
    color: var(--color-nav);
    text-decoration: none;
    font-weight: bold;
    position: relative;
    letter-spacing: 1px;
}

#nav li .menu.active{
    color: var(--color-nav-hover);
}

nav ul li ul{
    display: none;
    position: absolute;
    background-color: var(--color-nav-bg);
    border-radius: 10px;
    width: 210px;
    height: 94px;
    top: 36px;
    box-shadow: 0 0 10px #000;
    border: 1px solid #5e61d5;
    transition: all 0.3s;
    z-index: 100;
}
nav ul li ul::after{
    display: none;
    position: absolute;
    content: '';
    width: 0px;
    height: 0px;
    border-bottom: 5px solid transparent;
    border-left: 5px solid #5e61d5;
    border-top: 5px solid #5e61d5;
    border-right: 5px solid transparent;
    transform: rotate(45deg);
    top: -5px;
    left: 20px;
    z-index: 100;
}
nav ul li ul a{
    margin: 5px 0;
}

nav ul li:hover > ul{
    display: block;
}
nav ul li:hover > ul::after{
    display: block;
}

/* hover border botton */
nav a::after {
    position: absolute;
    content: "";
    width: 0%;
    height: 4px;
    border-bottom: solid 4px var(--color-nav-after-hover);
    color: var(--color-5);
    left: 50%;
    bottom: -4px;
    transition: all .2s ease-in-out;
}
nav li:hover a::after {
    width: 100%;
    left: 0;
}
nav ul li a:hover {
    color: var(--color-4);
    transition: .3s;
}
/* hover nav child */
nav li ul a::after {
    display: none;
    position: absolute;
    content: "";
    width: 0%;
    height: 4px;
    border-bottom: solid 4px var(--color-nav-after-hover);
    color: var(--color-4);
    left: 50%;
    bottom: -4px;
    transition: all .2s ease-in-out;
}
nav li ul li:hover a::after {
    display: block;
    width: 100%;
    left: 0;
}
nav ul li a:hover {
    color: var(--color-nav-hover);
    transition: .3s;
}





/* =====SEARCH COMPONENT===== */

.search {
    display: flex;
    width: 180px;
    justify-content: center;
}

.searchTerm {
    width: 100%;
    border-radius: 50vh;
    background: var(--color-1);
    border: solid 3px var(--color-5);
    height: 26px;
    outline: none;
    padding: 0 8px;
}

.searchTerm:focus {
    color: #000000;
}

.searchButton {
    position: absolute;
    height: 30px;
    background-color: transparent;
    border: transparent;
    color: var(--color-5);
    cursor: pointer;
    font-size: 20px;
    right: 16px;
}

/*Resize the wrap to see the search bar change!*/
.search-container {
    display: flex;
    align-items: center;
    padding-right: 3px;

}

.search-container a {
    font-size: 26px;
    padding: 3px;
    color: var(--color-3);
    transition: all 0.2s;
}

.search-container a:hover {
    font-size: 30px;
    color: var(--color-4);
}

.pad.bx.bx-menu {
    display: none;
}

/* =====SEARCH COMPONENT END===== */





/* =====END MENU======= */


#secction {
    background-color: var(--color-bg);
    background-size: cover;
}
/* ... */

